--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+Teaching assistance:
+======
+  <ul>{% for post in site.teaching reversed %}
+    {% include archive-single.html %}
+  {% endfor %}</ul>
