Try why heading does not work

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,12 @@ author_profile: true
 
 {% include base_path %}
 
+Publications
+======
+  <ul>{% for post in site.publications %}
+    {% include archive-single-cv.html %}
+  {% endfor %}</ul>
+
 Teaching assistance:
 ======
   <ul>{% for post in site.teaching reversed %}
