--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,14 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
-Publications
-======
-  <ul>{% for post in site.publications %}
-    {% include archive-single-cv.html %}
-  {% endfor %}</ul>
-
-Teaching assistance:
-======
+<h1> Teaching assistance: </h1>
   <ul>{% for post in site.teaching reversed %}
     {% include archive-single.html %}
   {% endfor %}</ul>
+ <h2 class="archive__item-title" itemprop="headline">
