--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-<h2> Teaching assistance: </h2>
+<h2> Teaching assistance </h2>
   <ul>{% for post in site.teaching reversed %}
     {% include archive-single.html %}
   {% endfor %}</ul>
