--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,4 +10,6 @@ author_profile: true
 <h2> Teaching assistance </h2>
   <ul>{% for post in site.teaching reversed %}
     {% include archive-single.html %}
-  {% endfor %}</ul>
+  {% endfor %}
+
+   Testing </ul>
