--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,10 +12,10 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 
-   <h2> ECON4470 Economics of Behavioral Finance </h2>
+   <h2><u> ECON4470 Economics of Behavioral Finance</u> </h2>
    Undergraduate course, <i> CUHK, Department of Economics </i>, 2021
     
-   <h2> ECON1101 Mathematical Methods in Economics I </h2>
+   <h2><u> ECON1101 Mathematical Methods in Economics I </u></h2>
    Undergraduate course, <i> CUHK, Department of Economics </i>, 2019
     
    </ul>
