--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,13 +7,13 @@ author_profile: true
 
 {% include base_path %}
 
-<h2> Teaching assistance </h2>
+<h2> Teaching assistant </h2>
   <ul>{% for post in site.teaching reversed %}
     {% include archive-single.html %}
   {% endfor %}
 
    <h2><u> ECON4470 Economics of Behavioral Finance</u> </h2>
-   Undergraduate course, <i> CUHK, Department of Economics </i>, 2021
+   Undergraduate course, <i> CUHK, Department of Economics </i>, 2020
     
    <h2><u> ECON1101 Mathematical Methods in Economics I </u></h2>
    Undergraduate course, <i> CUHK, Department of Economics </i>, 2019
