Revise teaching page with updated course information
Updated teaching page to include course details and removed old structure.

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,21 +1,23 @@
 ---
 layout: archive
-title: "Teaching"
+title: ""
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+## Teaching assistant
+---
 
-<h2> Teaching assistant </h2>
-  <ul>{% for post in site.teaching reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
+### The Chinese University of Hong Kong
 
-   <h2><u> ECON4470 Economics of Behavioral Finance</u> </h2>
-   Undergraduate course, <i> CUHK, Department of Economics </i>, 2021
-    
-   <h2><u> ECON1101 Mathematical Methods in Economics I </u></h2>
-   Undergraduate course, <i> CUHK, Department of Economics </i>, 2019
-    
-   </ul>
+---
+
+- **ECON 4130: Economic Analysis for Social Networks**  
+  Undergraduate course, CUHK Department of Economics, 2020.  
+  Designed assignments and an extra lecture.
+
+- **ECON 4470: Economics of Behavioral Finance**  
+  Undergraduate course, CUHK Department of Economics, 2021.
+
+- **ECON 1101: Mathematical Methods in Economics I**  
+  Undergraduate course, CUHK Department of Economics, 2019.
