--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,19 +5,28 @@ permalink: /teaching/
 author_profile: true
 ---
 
-## Teaching assistant
+### As Instructor
 ---
 
-### The Chinese University of Hong Kong
+**Emory University**
 
+- **ECON 320: Econometrics (Lab) (UG)**
+
+### As Teaching Assistant
 ---
 
-- **ECON 4130: Economic Analysis for Social Networks**  
-  Undergraduate course, CUHK Department of Economics, 2020.  
-  Designed assignments and an extra lecture.
+**Emory University**
 
-- **ECON 4470: Economics of Behavioral Finance**  
-  Undergraduate course, CUHK Department of Economics, 2021.
+- **ECON 722: Time Series Econometrics (PhD)**  
+- **ECON 622: Econometric Methods II (PhD)** 
+- **ECON 620: Probability Theory and Statistical Inference (PhD)** – 
+- **ECON 524: Big Data Econometrics (Master’s)**
+- **ECON 320: Econometrics (UG)**
+- **ECON 220: Data Science for Economists (UG)**  
 
-- **ECON 1101: Mathematical Methods in Economics I**  
-  Undergraduate course, CUHK Department of Economics, 2019.
+**The Chinese University of Hong Kong**
+
+- **ECON 4470: Economics of Behavioral Finance (UG)**  
+- **ECON 4130: Economic Analysis for Social Networks (UG)** 
+- **ECON 1101: Mathematical Methods in Economics I (UG)**
+
