Update ECON 320 lab title for Fall 2025

--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -1,5 +1,5 @@
 ---
-title: "ECON 320: Econometrics Lab (1/2) Fall 2025"
+title: ""
 permalink: /econ320lab/
 layout: single
 author_profile: true
@@ -70,7 +70,7 @@ author_profile: true
 </style>
 
 <div class="econ320-header">
-  <div class="econ320-header-title">ECON 320: Econometrics Lab (1/2)</div>
+  <div class="econ320-header-title">ECON 320: Econometrics Lab (1/2) Fall 2025</div>
   <p class="econ320-header-meta">Emory University, Department of Economics</p>
   <p class="econ320-header-meta">Instructor: Ka Yan Cheng</p>
 </div>
