Fix HTML entity encoding in econ320lab.html

--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -24,6 +24,7 @@ author_profile: true
   }
   .econ320-section {
     margin-top: 1.8rem;
+    font-size: 0.9rem;  /* smaller “normal” text */
   }
   .econ320-section h2 {
     font-size: 1.15rem;
@@ -135,7 +136,7 @@ author_profile: true
       <tbody>
         <tr>
           <td>0</td>
-          <td>Class Logistics & Getting used to GitHub Classroom</td>
+          <td>Class Logistics &amp; Getting used to GitHub Classroom</td>
           <td>
             <span class="econ320-note">Slides</span>
             <!-- Example:
@@ -154,13 +155,13 @@ author_profile: true
         </tr>
         <tr>
           <td>1</td>
-          <td>Review: Descriptive Statistics & Basic Python Coding </td>
+          <td>Review: Descriptive Statistics &amp; Basic Python Coding</td>
           <td><span class="econ320-note">HTML, notebook</span></td>
           <td><span class="econ320-note">HTML, notebook</span></td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Understanding and Presenting Data </td>
+          <td>Understanding and Presenting Data</td>
           <td><span class="econ320-note">HTML, notebook</span></td>
           <td><span class="econ320-note">HTML, notebook</span></td>
         </tr>
@@ -202,7 +203,7 @@ author_profile: true
         </tr>
         <tr>
           <td>9</td>
-          <td>Inference: t Test & F Test</td>
+          <td>Inference: t Test &amp; F Test</td>
           <td><span class="econ320-note">HTML, notebook</span></td>
           <td><span class="econ320-note">HTML, notebook</span></td>
         </tr>
@@ -214,8 +215,7 @@ author_profile: true
         </tr>
         <tr>
           <td>11</td>
-          <td>Critical Thinking & Causal Inference:
-Endogeneity & Instrumental Variables (IV)</td>
+          <td>Critical Thinking &amp; Causal Inference: Endogeneity &amp; Instrumental Variables (IV)</td>
           <td><span class="econ320-note">HTML, notebook</span></td>
           <td><span class="econ320-note">HTML, notebook</span></td>
         </tr>
@@ -275,4 +275,5 @@ Endogeneity & Instrumental Variables (IV)</td>
     </li>
   </ul>
 </div>
+
 
