Modify class logistics to add line break
Updated class logistics section to include a line break.

--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -134,14 +134,10 @@ author_profile: true
       <tbody>
         <tr>
           <td>0</td>
-          <td>Class Logistics &amp; Getting used to GitHub Classroom</td>
+          <td>Class Logistics &amp; <br> Getting used to GitHub Classroom</td>
           <td>
             <span class="econ320-note">Slides</span>
-            <!-- Example:
             <a href="/files/Econ320LAB/lectures/Week%200/Econ320Lab_Week0_Slides.pdf">Slides (PDF)</a><br>
-            <a href="/files/Econ320LAB/lectures/Week%200/Completed/ECON320LAB-Week0.html">HTML</a> |
-            <a href="/files/Econ320LAB/lectures/Week%200/Completed/ECON320LAB-Week0.ipynb">Notebook</a>
-            -->
           </td>
           <td>
             <span class="econ320-note">HTML, notebook</span>
