--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -42,6 +42,9 @@ author_profile: true
     padding-left: 1.2rem;
     font-size: 0.95rem;
   }
+  .econ320-ref {
+  font-size: 0.85rem;
+  }
   .econ320-links li {
     margin: 0.1rem 0;
   }
@@ -149,9 +152,17 @@ author_profile: true
         </tr>
         <tr>
           <td>1</td>
-          <td>Review: Descriptive Statistics &amp; Basic Python Coding</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>Review: Descriptive Statistics <br> &amp; Basic Python Coding</td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%200/Lab_Exercise/ECON320LAB-LabExWeek1.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%200/Lab_Exercise/ECON320LAB-LabExWeek1.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="...">HTML</a> | <a href="...">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>2</td>
