Update links and notes in econ320lab.html

--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -167,56 +167,128 @@ author_profile: true
         <tr>
           <td>2</td>
           <td>Understanding and Presenting Data</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%202/Completed/ECON320LAB-Week2.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%202/Completed/ECON320LAB-Week2.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%202/Lab_Exercise/ECON320LAB-LabExWeek2.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%202/Lab_Exercise/ECON320LAB-LabExWeek2.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>3</td>
           <td>OLS Estimator for Simple Linear Regression</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%203/Completed/ECON320LAB-Week3.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%203/Completed/ECON320LAB-Week3.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%203/Lab_Exercise/ECON320LAB-LabExWeek3.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%203/Lab_Exercise/ECON320LAB-LabExWeek3.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>4</td>
           <td>OLS Estimator for Multiple Linear Regression</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%204/Completed/ECON320LAB-Week4.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%204/Completed/ECON320LAB-Week4.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%204/Lab_Exercise/ECON320LAB-LabExWeek4.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%204/Lab_Exercise/ECON320LAB-LabExWeek4.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>5</td>
           <td>Incorporating Qualitative Data</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%205/Completed/ECON320LAB-Week5.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%205/Completed/ECON320LAB-Week5.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%205/Lab_Exercise/ECON320LAB-LabExWeek5.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%205/Lab_Exercise/ECON320LAB-LabExWeek5.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>6</td>
           <td>Multicollinearity</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%206/Completed/ECON320LAB-Week6.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%206/Completed/ECON320LAB-Week6.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%206/Lab_Exercise/ECON320LAB-LabExWeek6.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%206/Lab_Exercise/ECON320LAB-LabExWeek6.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>7</td>
           <td>Omitted Variable Bias</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%207/Completed/ECON320LAB-Week7.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%207/Completed/ECON320LAB-Week7.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%207/Lab_Exercise/ECON320LAB-LabExWeek7.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%207/Lab_Exercise/ECON320LAB-LabExWeek7.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>8</td>
           <td>Asymptotic Analysis</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>9</td>
           <td>Inference: t Test &amp; F Test</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%209/Completed/ECON320LAB-Week9.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%209/Completed/ECON320LAB-Week9.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%209/Lab_Exercise/ECON320LAB-LabExWeek9.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%209/Lab_Exercise/ECON320LAB-LabExWeek9.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>10</td>
           <td>Heteroskedasticity-robust standard errors</td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%2010/Completed/ECON320LAB-Week10.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2010/Completed/ECON320LAB-Week10.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%2010/Lab_Exercise/ECON320LAB-LabExWeek10.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2010/Lab_Exercise/ECON320LAB-LabExWeek10.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
         <tr>
           <td>11</td>
@@ -224,8 +296,16 @@ author_profile: true
             Critical Thinking &amp; Causal Inference:<br>
             Endogeneity &amp; Instrumental Variables (IV)
           </td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
-          <td><span class="econ320-note">HTML, notebook</span></td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%2011/Completed/ECON320LAB-Week11.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2011/Completed/ECON320LAB-Week11.ipynb">Notebook</a>
+            </span>
+          </td>
+          <td>
+            <span class="econ320-ref">
+              <a href="/files/Econ320LAB/lectures/Week%2011/Lab_Exercise/ECON320LAB-LabExWeek11.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2011/Lab_Exercise/ECON320LAB-LabExWeek11.ipynb">Notebook</a>
+            </span>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -237,35 +317,27 @@ author_profile: true
   <ul class="econ320-links">
     <li>
       <strong>Problem set 1</strong> –
-      <span class="econ320-note">HTML, notebook</span>
-      <!-- Example:
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.html">HTML</a> |
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.ipynb">Notebook</a>
-      -->
+      <span class="econ320-ref">
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.ipynb">Notebook</a>
+      </span>
     </li>
     <li>
       <strong>Problem set 2</strong> –
-      <span class="econ320-note">HTML, notebook</span>
-      <!-- Example:
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.html">HTML</a> |
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.ipynb">Notebook</a>
-      -->
+      <span class="econ320-ref">
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.ipynb">Notebook</a>
+      </span>
     </li>
     <li>
       <strong>Problem set 3</strong> –
-      <span class="econ320-note">HTML, notebook</span>
-      <!-- Example:
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.html">HTML</a> |
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.ipynb">Notebook</a>
-      -->
+      <span class="econ320-ref">
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.ipynb">Notebook</a>
+      </span>
     </li>
     <li>
       <strong>Problem set 4</strong> –
-      <span class="econ320-note">HTML, notebook</span>
-      <!-- Example:
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.html">HTML</a> |
-      <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.ipynb">Notebook</a>
-      -->
+      <span class="econ320-ref">
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.ipynb">Notebook</a>
+      </span>
     </li>
   </ul>
 </div>
@@ -275,14 +347,9 @@ author_profile: true
   <ul class="econ320-links">
     <li>
       <strong>Final project</strong> –
-      <span class="econ320-note">guidelines, datasets</span>
-      <!-- Example:
-      <a href="/files/Econ320LAB/project%20guidelines/final_project_guideline.html">Guidelines</a> |
-      <a href="/files/Econ320LAB/project%20guidelines/final_project_datasets.html">Datasets information</a>
-      -->
+      <span class="econ320-ref">
+        <a href="/files/Econ320LAB/project%20guidelines/final_project_guideline.html">Guidelines</a> | <a href="/files/Econ320LAB/project%20guidelines/final_project_datasets.html">Datasets information</a>
+      </span>
     </li>
   </ul>
 </div>
-
-
-
