--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -146,7 +146,7 @@ author_profile: true
             <span class="econ320-note">HTML, notebook</span>
             <!-- Example:
             <a href="/files/Econ320LAB/lectures/Week%200/Lab_Exercise/ECON320LAB-LabExWeek0.html">HTML</a> |
-            <a href="/files/Econ320LAB/lectures/Week%200/Lab_Exercise/ECON320LAB-LabExWeek0.ipynb">Notebook</a>
+            <a href="/files/Econ320LAB/lectures/Week%200/Lab_Exercise/ECON320LAB-LabExWeek0.ipynb" download>Notebook</a>
             -->
           </td>
         </tr>
@@ -155,12 +155,12 @@ author_profile: true
           <td>Review: Descriptive Statistics <br> &amp; Basic Python Coding</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%201/Completed/ECON320LAB-Week1.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%201/Completed/ECON320LAB-Week1.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%201/Completed/ECON320LAB-Week1.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%201/Completed/ECON320LAB-Week1.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%201/Lab_Exercise/ECON320LAB-LabExWeek1.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%201/Lab_Exercise/ECON320LAB-LabExWeek1.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%201/Lab_Exercise/ECON320LAB-LabExWeek1.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%201/Lab_Exercise/ECON320LAB-LabExWeek1.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -169,12 +169,12 @@ author_profile: true
           <td>Understanding and Presenting Data</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%202/Completed/ECON320LAB-Week2.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%202/Completed/ECON320LAB-Week2.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%202/Completed/ECON320LAB-Week2.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%202/Completed/ECON320LAB-Week2.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%202/Lab_Exercise/ECON320LAB-LabExWeek2.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%202/Lab_Exercise/ECON320LAB-LabExWeek2.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%202/Lab_Exercise/ECON320LAB-LabExWeek2.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%202/Lab_Exercise/ECON320LAB-LabExWeek2.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -183,12 +183,12 @@ author_profile: true
           <td>OLS Estimator for Simple Linear Regression</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%203/Completed/ECON320LAB-Week3.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%203/Completed/ECON320LAB-Week3.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%203/Completed/ECON320LAB-Week3.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%203/Completed/ECON320LAB-Week3.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%203/Lab_Exercise/ECON320LAB-LabExWeek3.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%203/Lab_Exercise/ECON320LAB-LabExWeek3.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%203/Lab_Exercise/ECON320LAB-LabExWeek3.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%203/Lab_Exercise/ECON320LAB-LabExWeek3.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -197,12 +197,12 @@ author_profile: true
           <td>OLS Estimator for Multiple Linear Regression</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%204/Completed/ECON320LAB-Week4.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%204/Completed/ECON320LAB-Week4.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%204/Completed/ECON320LAB-Week4.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%204/Completed/ECON320LAB-Week4.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%204/Lab_Exercise/ECON320LAB-LabExWeek4.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%204/Lab_Exercise/ECON320LAB-LabExWeek4.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%204/Lab_Exercise/ECON320LAB-LabExWeek4.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%204/Lab_Exercise/ECON320LAB-LabExWeek4.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -211,12 +211,12 @@ author_profile: true
           <td>Incorporating Qualitative Data</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%205/Completed/ECON320LAB-Week5.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%205/Completed/ECON320LAB-Week5.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%205/Completed/ECON320LAB-Week5.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%205/Completed/ECON320LAB-Week5.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%205/Lab_Exercise/ECON320LAB-LabExWeek5.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%205/Lab_Exercise/ECON320LAB-LabExWeek5.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%205/Lab_Exercise/ECON320LAB-LabExWeek5.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%205/Lab_Exercise/ECON320LAB-LabExWeek5.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -225,12 +225,12 @@ author_profile: true
           <td>Multicollinearity</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%206/Completed/ECON320LAB-Week6.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%206/Completed/ECON320LAB-Week6.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%206/Completed/ECON320LAB-Week6.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%206/Completed/ECON320LAB-Week6.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%206/Lab_Exercise/ECON320LAB-LabExWeek6.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%206/Lab_Exercise/ECON320LAB-LabExWeek6.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%206/Lab_Exercise/ECON320LAB-LabExWeek6.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%206/Lab_Exercise/ECON320LAB-LabExWeek6.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -239,12 +239,12 @@ author_profile: true
           <td>Omitted Variable Bias</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%207/Completed/ECON320LAB-Week7.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%207/Completed/ECON320LAB-Week7.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%207/Completed/ECON320LAB-Week7.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%207/Completed/ECON320LAB-Week7.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%207/Lab_Exercise/ECON320LAB-LabExWeek7.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%207/Lab_Exercise/ECON320LAB-LabExWeek7.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%207/Lab_Exercise/ECON320LAB-LabExWeek7.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%207/Lab_Exercise/ECON320LAB-LabExWeek7.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -253,12 +253,12 @@ author_profile: true
           <td>Asymptotic Analysis</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -267,12 +267,12 @@ author_profile: true
           <td>Inference: t Test &amp; F Test</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%209/Completed/ECON320LAB-Week9.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%209/Completed/ECON320LAB-Week9.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%209/Completed/ECON320LAB-Week9.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%209/Completed/ECON320LAB-Week9.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%209/Lab_Exercise/ECON320LAB-LabExWeek9.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%209/Lab_Exercise/ECON320LAB-LabExWeek9.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%209/Lab_Exercise/ECON320LAB-LabExWeek9.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%209/Lab_Exercise/ECON320LAB-LabExWeek9.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -281,12 +281,12 @@ author_profile: true
           <td>Heteroskedasticity-robust standard errors</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%2010/Completed/ECON320LAB-Week10.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2010/Completed/ECON320LAB-Week10.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%2010/Completed/ECON320LAB-Week10.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2010/Completed/ECON320LAB-Week10.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%2010/Lab_Exercise/ECON320LAB-LabExWeek10.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2010/Lab_Exercise/ECON320LAB-LabExWeek10.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%2010/Lab_Exercise/ECON320LAB-LabExWeek10.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2010/Lab_Exercise/ECON320LAB-LabExWeek10.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -298,12 +298,12 @@ author_profile: true
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%2011/Completed/ECON320LAB-Week11.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2011/Completed/ECON320LAB-Week11.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%2011/Completed/ECON320LAB-Week11.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2011/Completed/ECON320LAB-Week11.ipynb" download>Notebook</a>
             </span>
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%2011/Lab_Exercise/ECON320LAB-LabExWeek11.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2011/Lab_Exercise/ECON320LAB-LabExWeek11.ipynb">Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%2011/Lab_Exercise/ECON320LAB-LabExWeek11.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%2011/Lab_Exercise/ECON320LAB-LabExWeek11.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
@@ -318,25 +318,25 @@ author_profile: true
     <li>
       <strong>Problem set 1</strong> –
       <span class="econ320-ref">
-        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.ipynb">Notebook</a>
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS1.ipynb" download>Notebook</a>
       </span>
     </li>
     <li>
       <strong>Problem set 2</strong> –
       <span class="econ320-ref">
-        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.ipynb">Notebook</a>
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS2.ipynb" download>Notebook</a>
       </span>
     </li>
     <li>
       <strong>Problem set 3</strong> –
       <span class="econ320-ref">
-        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.ipynb">Notebook</a>
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS3.ipynb" download>Notebook</a>
       </span>
     </li>
     <li>
       <strong>Problem set 4</strong> –
       <span class="econ320-ref">
-        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.ipynb">Notebook</a>
+        <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.html">HTML</a> | <a href="/files/Econ320LAB/problem%20sets/ECON320LAB-PS4.ipynb" download>Notebook</a>
       </span>
     </li>
   </ul>
