--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -139,15 +139,13 @@ author_profile: true
           <td>0</td>
           <td>Class Logistics &amp; <br> Getting used to GitHub Classroom</td>
           <td>
-            <span class="econ320-note">Slides</span>
-            <a href="/files/Econ320LAB/lectures/Week%200/Econ320Lab_Week0_Slides.pdf">Slides (PDF)</a><br>
+            <a href="/files/Econ320LAB/lectures/Week%200/Econ320Lab12_Week0_Slides.pdf">Slides (PDF)</a><br>
           </td>
           <td>
-            <span class="econ320-note">HTML, notebook</span>
-            <!-- Example:
+            <span class="econ320-ref">
             <a href="/files/Econ320LAB/lectures/Week%200/Lab_Exercise/ECON320LAB-LabExWeek0.html">HTML</a> |
             <a href="/files/Econ320LAB/lectures/Week%200/Lab_Exercise/ECON320LAB-LabExWeek0.ipynb" download>Notebook</a>
-            -->
+            </span>
           </td>
         </tr>
         <tr>
@@ -253,7 +251,7 @@ author_profile: true
           <td>Asymptotic Analysis</td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Completed/ECON320LAB-Week8.ipynb" download>Notebook</a>
+              -
             </span>
           </td>
           <td>
