Fix links for Lab Exercise Week 8

--- a/_pages/econ320lab.html
+++ b/_pages/econ320lab.html
@@ -256,7 +256,7 @@ author_profile: true
           </td>
           <td>
             <span class="econ320-ref">
-              <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Lab_Exercise/ECON320LAB-LabExWeek8.ipynb" download>Notebook</a>
+              <a href="/files/Econ320LAB/lectures/Week%208/Lab%20Exercise/ECON320LAB-LabExWeek8.html">HTML</a> | <a href="/files/Econ320LAB/lectures/Week%208/Lab%20Exercise/ECON320LAB-LabExWeek8.ipynb" download>Notebook</a>
             </span>
           </td>
         </tr>
